--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
         <div class="px-8 md:py-6 py-4 rounded-xl bg-yellow-400">
           <h2 class="text-2xl font-semibold">Balance</h2>
-          <h1 class="md:text-4xl text-3xl mt-2">$<span id="total-balance">1000000</span></h1>
+          <h1 class="md:text-4xl text-3xl mt-2">$<span id="total-balance">50000</span></h1>
         </div>
       </div>
     </section>
